--- a/referidos.html
+++ b/referidos.html
@@ -8,8 +8,8 @@
       href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;600;700;800;900&family=Playfair+Display:wght@700;900&display=swap"
       rel="stylesheet"
     />
-    <link rel="stylesheet" href="assets/css/styles.css?v=20260214z" />
-    <script src="assets/js/layout.js?v=20260214z" type="module"></script>
+    <link rel="stylesheet" href="assets/css/styles.css?v=20260222f" />
+    <script src="assets/js/layout.js?v=20260222f" type="module"></script>
   </head>
 
   <body data-page="referidos">
@@ -77,6 +77,12 @@
               <a class="btn-white-outline" href="espanel.html">Libreta</a>
             </div>
           </section>
+
+          <section class="card" style="margin-top: 12px">
+            <div class="sectionTitle" style="margin-top: 0">Solicitudes recibidas</div>
+            <div class="muted" id="friendInvitesHint">Cargando...</div>
+            <div class="friendList" id="friendInvitesList" style="margin-top: 10px"></div>
+          </section>
         </section>
 
         <aside class="profile-side">
@@ -141,8 +147,8 @@
       </div>
     </main>
 
-    <script type="module" src="assets/js/pages/buscar-page.js?v=20260214z"></script>
-    <script type="module" src="assets/js/pages/amigos-page.js?v=20260214z"></script>
+    <script type="module" src="assets/js/pages/buscar-page.js?v=20260222f"></script>
+    <script type="module" src="assets/js/pages/amigos-page.js?v=20260222f"></script>
   </body>
 </html>
 
