--- a/buscar.html
+++ b/buscar.html
@@ -8,8 +8,8 @@
       href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;600;700;800;900&family=Playfair+Display:wght@700;900&display=swap"
       rel="stylesheet"
     />
-    <link rel="stylesheet" href="assets/css/styles.css?v=20260208m" />
-    <script src="assets/js/layout.js?v=20260208m" type="module"></script>
+    <link rel="stylesheet" href="assets/css/styles.css?v=20260222f" />
+    <script src="assets/js/layout.js?v=20260222f" type="module"></script>
   </head>
 
   <body data-page="buscar">
@@ -99,7 +99,7 @@
       </div>
     </main>
 
-    <script type="module" src="assets/js/pages/buscar-page.js"></script>
+    <script type="module" src="assets/js/pages/buscar-page.js?v=20260222f"></script>
   </body>
 </html>
 
