--- a/espanel.html
+++ b/espanel.html
@@ -8,8 +8,8 @@
       href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;600;700;900&family=Playfair+Display:wght@700;900&display=swap"
       rel="stylesheet"
     />
-    <link rel="stylesheet" href="assets/css/styles.css?v=20260214z" />
-    <script src="assets/js/layout.js?v=20260214z" type="module"></script>
+    <link rel="stylesheet" href="assets/css/styles.css?v=20260222f" />
+    <script src="assets/js/layout.js?v=20260222f" type="module"></script>
   </head>
 
   <body data-page="panel">
@@ -370,7 +370,7 @@
       </div>
     </main>
 
-    <script type="module" src="assets/js/pages/panel-page.js?v=20260215a"></script>
+    <script type="module" src="assets/js/pages/panel-page.js?v=20260222f"></script>
   </body>
 </html>
 
