--- a/perfil.html
+++ b/perfil.html
@@ -9,8 +9,8 @@
       href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;600;700;900&family=Playfair+Display:wght@700;900&display=swap"
       rel="stylesheet"
     />
-    <link rel="stylesheet" href="assets/css/styles.css?v=20260208m" />
-    <script src="assets/js/layout.js?v=20260208m" type="module"></script>
+    <link rel="stylesheet" href="assets/css/styles.css?v=20260222f" />
+    <script src="assets/js/layout.js?v=20260222f" type="module"></script>
   </head>
 
   <body data-page="profile" class="with-side-panel">
@@ -499,7 +499,7 @@
       </div>
     </main>
 
-    <script type="module" src="assets/js/pages/perfil-page.js"></script>
+    <script type="module" src="assets/js/pages/perfil-page.js?v=20260222f"></script>
   </body>
 </html>
 
