--- a/buscar.html
+++ b/buscar.html
@@ -9,7 +9,7 @@
       rel="stylesheet"
     />
     <link rel="stylesheet" href="assets/css/styles.css?v=20260222f" />
-    <script src="assets/js/layout.js?v=20260222f" type="module"></script>
+    <script src="assets/js/layout.js?v=20260222g" type="module"></script>
   </head>
 
   <body data-page="buscar">
@@ -99,7 +99,7 @@
       </div>
     </main>
 
-    <script type="module" src="assets/js/pages/buscar-page.js?v=20260222f"></script>
+    <script type="module" src="assets/js/pages/buscar-page.js?v=20260222g"></script>
   </body>
 </html>
 
