--- a/mensajes.html
+++ b/mensajes.html
@@ -9,7 +9,7 @@
       rel="stylesheet"
     />
     <link rel="stylesheet" href="assets/css/styles.css?v=20260222f" />
-    <script src="assets/js/layout.js?v=20260222f" type="module"></script>
+    <script src="assets/js/layout.js?v=20260222g" type="module"></script>
   </head>
 
   <body data-page="mensajes">
@@ -292,6 +292,6 @@
       </div>
     </div>
 
-    <script type="module" src="assets/js/pages/mensajes-page.js?v=20260222f"></script>
+    <script type="module" src="assets/js/pages/mensajes-page.js?v=20260222g"></script>
   </body>
 </html>
