--- a/perfil.html
+++ b/perfil.html
@@ -10,7 +10,7 @@
       rel="stylesheet"
     />
     <link rel="stylesheet" href="assets/css/styles.css?v=20260222f" />
-    <script src="assets/js/layout.js?v=20260222f" type="module"></script>
+    <script src="assets/js/layout.js?v=20260222g" type="module"></script>
   </head>
 
   <body data-page="profile" class="with-side-panel">
@@ -499,7 +499,7 @@
       </div>
     </main>
 
-    <script type="module" src="assets/js/pages/perfil-page.js?v=20260222f"></script>
+    <script type="module" src="assets/js/pages/perfil-page.js?v=20260222g"></script>
   </body>
 </html>
 
