--- a/espanel.html
+++ b/espanel.html
@@ -1,376 +1,33 @@
-﻿<!doctype html>
+<!doctype html>
 <html lang="es">
   <head>
     <meta charset="utf-8" />
-    <title>Panel del estudiante | AquiVivo</title>
+    <title>Redirigiendo...</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link
-      href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;600;700;900&family=Playfair+Display:wght@700;900&display=swap"
-      rel="stylesheet"
-    />
-    <link rel="stylesheet" href="assets/css/styles.css?v=20260222f" />
-    <script src="assets/js/layout.js?v=20260222g" type="module"></script>
+    <meta http-equiv="refresh" content="0; url=perfil.html" />
   </head>
+  <body>
+    <script>
+      (function () {
+        const hash = String(location.hash || '').toLowerCase();
+        const incoming = new URLSearchParams(location.search || '');
+        let path = 'perfil.html';
+        const next = new URLSearchParams();
 
-  <body data-page="panel">
-    <div id="appHeader"></div>
+        if (hash.includes('cursos')) next.set('tab', 'courses');
+        if (hash.includes('pagos')) path = 'pagos.html';
+        if (hash.includes('ayuda')) path = 'ayuda.html';
+        if (hash.includes('notificaciones')) path = 'notificaciones.html';
 
-    <main class="page">
-      <div class="container">
-        <div class="panelHeroGrid">
-          <div class="panelHeroLeft">
-            <div class="heroBanner" style="align-self: start">
-              <div class="heroTitleRow">
-                <div class="heroIcon heroIcon--avatar" id="userAvatarWrap">
-                  <img id="userAvatarImg" alt="Foto de perfil" />
-                  <span id="userAvatarFallback"></span>
-                </div>
-                <div>
-                  <h1 class="glow-text" id="panelTitle" style="margin: 0; font-size: 44px">
-                    ¡Buenas!
-                  </h1>
-                  <div class="muted" id="panelSubtitle" style="margin-top: 6px">
-                    Aquí tienes tu libreta!<br />¡Qué chimba verte!
-                  </div>
-                  <div class="metaRow" style="margin-top: 10px; gap: 10px; flex-wrap: wrap">
-                    <button class="btn-white-outline" id="btnAvatarUpload" type="button">
-                      Cambiar foto
-                    </button>
-                    <button class="btn-white-outline" id="btnAvatarRemove" type="button">
-                      Quitar foto
-                    </button>
-                    <span class="hintSmall" id="avatarMsg"></span>
-                    <input id="avatarFile" type="file" accept="image/*" style="display: none" />
-                  </div>
-                </div>
-              </div>
+        incoming.forEach((value, key) => {
+          if (!next.has(key)) next.set(key, value);
+        });
 
-              <div
-                class="metaRow"
-                style="margin-top: 14px; flex-wrap: wrap; gap: 10px"
-              >
-                <span
-                  ><b id="userEmail">...</b>
-                  <span id="adminBadge" style="margin-left: 10px"
-                    >(admin: —)</span
-                  ></span
-                >
-
-                <!-- ? Access status pills (Krok 11) -->
-                <span id="accessPill" style="display: none"></span>
-                <span id="planPill" style="display: none"></span>
-                <span id="untilPill" style="display: none"></span>
-
-                <span
-                  id="adminLinkWrap"
-                  class="metaRow"
-                  style="margin-left: auto"
-                ></span>
-              </div>
-            </div>
-            <div class="panelOverviewGrid">
-              <div class="card" id="trialCard">
-                <div class="sectionTitle" style="margin-top: 0">
-                  Prueba gratis A1
-                </div>
-                <div class="metaRow" style="margin-top: 10px; gap: 10px; flex-wrap: wrap">
-                  <button class="btn-yellow" id="btnTrialA1" type="button">
-                    Activa A1 gratis 7 dias
-                  </button>
-                </div>
-                <div class="hintSmall" id="trialMsg" style="margin-top: 8px; display: none"></div>
-              </div>
-            </div>
-            <div id="notificaciones"></div>
-          </div>
-          <div class="referralSide">
-            <div class="card">
-              <div class="sectionTitle" style="margin-top: 0">Amigos</div>
-              <div class="muted">
-                Busqueda, invitaciones y recomendacion en una sola pestana.
-              </div>
-              <div class="metaRow" style="margin-top: 12px; gap: 10px; flex-wrap: wrap">
-                <a class="btn-yellow" href="referidos.html" style="text-decoration: none">Abrir Amigos</a>
-                <a class="btn-white-outline" href="perfil.html?tab=friends" style="text-decoration: none"
-                  >Ver mi red</a
-                >
-              </div>
-            </div>
-
-            <div class="card">
-              <div class="sectionTitle" style="margin-top: 0">Mensajes</div>
-              <div class="muted">
-                Conversaciones, bandeja y avisos del equipo en un solo lugar.
-              </div>
-              <div class="metaRow" style="margin-top: 12px; gap: 10px; flex-wrap: wrap">
-                <a class="btn-yellow" href="mensajes.html" style="text-decoration: none">Abrir Mensajes</a>
-              </div>
-            </div>
-
-            <div class="card">
-              <div class="sectionTitle" style="margin-top: 0">Pasaporte</div>
-              <div class="muted">
-                Ruta cultural continua del curso, sin dividir por niveles.
-              </div>
-              <div class="metaRow" style="margin-top: 12px; gap: 10px; flex-wrap: wrap">
-                <a class="btn-white-outline" href="recompensas.html" style="text-decoration: none"
-                  >Abrir Pasaporte</a
-                >
-              </div>
-            </div>
-          </div>
-          </div>
-        </div>
-
-        <div id="cursos"></div>
-        <div class="card coursesSection" style="margin-top: 16px">
-          <div class="sectionTitle" style="margin-top: 0">Cursos</div>
-          <div class="muted">Selecciona un nivel para empezar.</div>
-          <div
-            id="coursesCards"
-            class="coursesGrid"
-            style="margin-top: 12px"
-          ></div>
-        </div>
-
-        <!-- Settings modal (placeholder for panel-page.js) -->
-        <div id="adminModal" class="modalOverlay" aria-hidden="true">
-          <div class="modalCard">
-            <div class="modalHead">
-              <div class="modalTitle">Admin / Ajustes</div>
-              <button
-                id="closeSettingsBtn"
-                class="btn-white-outline"
-                type="button"
-              >
-                ?
-              </button>
-            </div>
-            <div class="hr"></div>
-
-            <!-- host for extra buttons preview -->
-            <div id="extraButtonsHost" class="metaRow"></div>
-            <div
-              id="extraButtonsPreview"
-              class="muted"
-              style="margin-top: 10px"
-            ></div>
-
-            <div class="hr"></div>
-
-            <!-- Prices placeholders -->
-            <div class="panelGrid">
-              <div class="card">
-                <div class="sectionTitle" style="margin-top: 0">Precios</div>
-                <div class="metaRow">
-                  <input
-                    id="adm_price_A1A2"
-                    type="number"
-                    placeholder="A1/A2"
-                  />
-                  <input id="adm_price_B1" type="number" placeholder="B1" />
-                  <input id="adm_price_B2" type="number" placeholder="B2" />
-                </div>
-              </div>
-            </div>
-
-            <div
-              class="metaRow"
-              style="margin-top: 12px; justify-content: flex-end"
-            >
-              <button id="userClose" class="btn-white-outline" type="button">
-                Cerrar
-              </button>
-            </div>
-          </div>
-        </div>
-
-        <!-- Meta modal placeholders -->
-        <div id="metaModal" class="modalOverlay" aria-hidden="true">
-          <div class="modalCard">
-            <div class="modalHead">
-              <div class="modalTitle">Editar meta del curso</div>
-              <button id="metaClose" class="btn-white-outline" type="button">
-                ?
-              </button>
-            </div>
-            <div class="hr"></div>
-
-            <div class="panelGrid">
-              <div class="card">
-                <div class="sectionTitle" style="margin-top: 0">Nivel</div>
-                <div id="metaLevel" class="muted">—</div>
-                <div style="margin-top: 12px">
-                  <label class="muted" style="font-weight: 900">Title</label>
-                  <input id="metaTitle" type="text" />
-                </div>
-                <div style="margin-top: 10px">
-                  <label class="muted" style="font-weight: 900">Subtitle</label>
-                  <input id="metaSubtitle" type="text" />
-                </div>
-              </div>
-
-              <div class="card">
-                <div class="sectionTitle" style="margin-top: 0">
-                  Botón / Tile
-                </div>
-                <div class="metaRow">
-                  <input
-                    id="metaPrimaryLabel"
-                    type="text"
-                    placeholder="Primary label"
-                  />
-                  <input
-                    id="metaPrimaryHref"
-                    type="text"
-                    placeholder="Primary href"
-                  />
-                </div>
-                <div class="metaRow" style="margin-top: 10px">
-                  <input id="metaBtnText" type="text" placeholder="Btn text" />
-                  <input id="metaBtnBg" type="text" placeholder="Btn bg" />
-                </div>
-                <div class="metaRow" style="margin-top: 10px">
-                  <input
-                    id="metaTileText"
-                    type="text"
-                    placeholder="Tile text"
-                  />
-                  <input id="metaTileBg" type="text" placeholder="Tile bg" />
-                </div>
-              </div>
-            </div>
-
-            <div
-              class="metaRow"
-              style="margin-top: 12px; justify-content: flex-end"
-            >
-              <button id="metaSave" class="btn-yellow" type="button">
-                Guardar
-              </button>
-              <button id="metaCancel" class="btn-white-outline" type="button">
-                Cancelar
-              </button>
-              <span
-                id="metaDeleteWrap"
-                style="margin-left: auto; display: none"
-              >
-                <button id="metaDelete" class="btn-red" type="button">
-                  Eliminar
-                </button>
-                <button id="metaDeleteWithData" class="btn-red" type="button">
-                  Eliminar con datos
-                </button>
-              </span>
-            </div>
-          </div>
-        </div>
-
-        <!-- Add course modal placeholders -->
-        <div id="addCourseModal" class="modalOverlay" aria-hidden="true">
-          <div class="modalCard">
-            <div class="modalHead">
-              <div class="modalTitle">Nuevo curso</div>
-              <button
-                id="addCourseClose"
-                class="btn-white-outline"
-                type="button"
-              >
-                ?
-              </button>
-            </div>
-            <div class="hr"></div>
-
-            <div class="panelGrid">
-              <div class="card">
-                <div class="sectionTitle" style="margin-top: 0">Nivel</div>
-                <select id="newCourseLevel">
-                  <option value="A1">A1</option>
-                  <option value="A2">A2</option>
-                  <option value="B1">B1</option>
-                  <option value="B2">B2</option>
-                </select>
-                <div style="margin-top: 10px">
-                  <label class="muted" style="font-weight: 900">Title</label>
-                  <input id="newCourseTitle" type="text" />
-                </div>
-                <div style="margin-top: 10px">
-                  <label class="muted" style="font-weight: 900">Subtitle</label>
-                  <input id="newCourseSubtitle" type="text" />
-                </div>
-              </div>
-
-              <div class="card">
-                <div class="sectionTitle" style="margin-top: 0">
-                  Botón / Tile
-                </div>
-                <div class="metaRow">
-                  <input
-                    id="newCoursePrimaryLabel"
-                    type="text"
-                    placeholder="Primary label"
-                  />
-                  <input
-                    id="newCoursePrimaryHref"
-                    type="text"
-                    placeholder="Primary href"
-                  />
-                </div>
-                <div class="metaRow" style="margin-top: 10px">
-                  <input
-                    id="newCourseBtnText"
-                    type="text"
-                    placeholder="Btn text"
-                  />
-                  <input id="newCourseBtnBg" type="text" placeholder="Btn bg" />
-                </div>
-                <div class="metaRow" style="margin-top: 10px">
-                  <input
-                    id="newCourseTileText"
-                    type="text"
-                    placeholder="Tile text"
-                  />
-                  <input
-                    id="newCourseTileBg"
-                    type="text"
-                    placeholder="Tile bg"
-                  />
-                </div>
-              </div>
-            </div>
-
-            <div
-              class="metaRow"
-              style="margin-top: 12px; justify-content: flex-end"
-            >
-              <button id="addCourseCreate" class="btn-yellow" type="button">
-                Crear
-              </button>
-              <button
-                id="addCourseCancel"
-                class="btn-white-outline"
-                type="button"
-              >
-                Cancelar
-              </button>
-            </div>
-          </div>
-        </div>
-
-        <!-- legacy placeholders required by panel-page.js but not shown -->
-        <a id="adm_btn_href" style="display: none"></a>
-        <input id="adm_btn_text" style="display: none" />
-        <input id="adm_btn_style" style="display: none" />
-        <input id="addCourseBtn" style="display: none" />
-        <div id="metaDeleteWrap" style="display: none"></div>
-        <div id="metaDelete" style="display: none"></div>
-        <div id="metaDeleteWithData" style="display: none"></div>
-        <div id="metaSave" style="display: none"></div>
-        <div id="metaCancel" style="display: none"></div>
-      </div>
-    </main>
-
-    <script type="module" src="assets/js/pages/panel-page.js?v=20260222g"></script>
+        const query = next.toString();
+        const target = query ? `${path}?${query}` : path;
+        location.replace(target);
+      })();
+    </script>
+    <p>Redirigiendo a Perfil...</p>
   </body>
 </html>
-
