--- a/perfil.html
+++ b/perfil.html
@@ -13,13 +13,12 @@
     <script src="assets/js/layout.js?v=20260222g" type="module"></script>
   </head>
 
-  <body data-page="profile" class="with-side-panel">
+  <body data-page="profile" class="with-side-panel profile-flat">
     <div id="appHeader"></div>
     <aside id="sidePanel" class="side-panel">
-      <a href="espanel.html" data-page="panel">Libreta</a>
-      <a href="referidos.html" data-page="amigos">Amigos</a>
       <a href="perfil.html" data-page="profile" class="is-active">Perfil</a>
-      <a href="espanel.html#cursos" data-page="cursos">Mis cursos</a>
+      <a href="referidos.html" data-page="amigos">Amigos</a>
+      <a href="perfil.html?tab=courses" data-page="cursos">Mis cursos</a>
       <a href="review.html" data-page="practicar">Practicar</a>
       <a href="recompensas.html" data-page="recompensas">Pasaporte</a>
       <a href="ajustes.html" data-page="ajustes">Ajustes</a>
@@ -90,7 +89,7 @@
               <button class="btn-white-outline" id="btnProfileShare" type="button">Compartir</button>
               <button class="btn-white-outline" id="btnProfileBlock" type="button">Bloquear</button>
               <button class="btn-white-outline" id="btnProfileReport" type="button">Reportar</button>
-              <a class="btn-white-outline" href="espanel.html">Volver</a>
+              <a class="btn-white-outline" href="perfil.html">Volver</a>
               <span class="hintSmall" id="profileMsg"></span>
             </div>
           </div>
@@ -109,42 +108,6 @@
               <span>Siguiendo</span>
               <strong id="followingCount">0</strong>
             </div>
-            <div class="sectionTitle" style="margin-top: 16px">Buscar personas</div>
-            <div class="peopleSearchBar" style="margin-top: 10px">
-              <div class="ps-avatar" id="profileSearchAvatar" aria-hidden="true">
-                <img id="profileSearchAvatarImg" alt="" loading="lazy" />
-                <span id="profileSearchAvatarFallback">U</span>
-              </div>
-              <input
-                id="profileSearchInput"
-                class="ps-input"
-                placeholder="Busca por nombre o @usuario..."
-                autocomplete="off"
-                spellcheck="false"
-              />
-              <div class="ps-actions">
-                <button
-                  id="btnProfileSearchClear"
-                  class="ps-icon"
-                  type="button"
-                  aria-label="Limpiar"
-                  title="Limpiar"
-                >
-                  &times;
-                </button>
-                <button
-                  id="btnProfileSearch"
-                  class="ps-icon ps-icon--primary"
-                  type="button"
-                  aria-label="Buscar"
-                  title="Buscar"
-                >
-                  &#128269;
-                </button>
-              </div>
-            </div>
-            <div id="profileSearchStatus" class="hintSmall" style="margin-top: 6px"></div>
-            <div id="profileSearchResults" class="friendList" style="margin-top: 8px"></div>
             <div class="sectionTitle" style="margin-top: 16px">Últimas reacciones</div>
             <div class="muted" id="recentReactions">Sin reacciones aún.</div>
             <div class="sectionTitle" style="margin-top: 16px">Sugerencias</div>
@@ -499,7 +462,7 @@
       </div>
     </main>
 
-    <script type="module" src="assets/js/pages/perfil-page.js?v=20260222g"></script>
+    <script type="module" src="assets/js/pages/perfil-page.js?v=20260222i"></script>
   </body>
 </html>
 
